# bio-optics-sim

./: .gitattributes  .gitignore  README.md  pyproject.toml
examples/: plot_angle_scan_internal.py  plot_convergence_small.py  plot_rayleigh.py  run_absorption_only.py  run_fresnel_demo.py  run_scatter_demo.py  run_seminf_reflectance.py  visualize_s1.py  visualize_s2_like_s1.py
sandbox/: README.md  minicore_cpu.py  test_minicore.py
src/biooptics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/biooptics/mc/: __init__.py  kernels_cpu.py  photon_types.py  rng.py  tallies.py
src/biooptics/models/: layers.py  materials.py  scattering.py
src/biooptics/simulation/: run_small.py  s1_seminf.py
tests/: test_boundary.py  test_boundary_handle.py  test_energy_balance.py  test_fresnel.py  test_layers.py  test_models.py  test_scattering.py  test_visual_angle_fresnel.py
