[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biooptics"
version = "0.0.1"
description = "Monte Carlo tissue optics simulator"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["biooptics"]
